# Zingx

./: .gitignore  README.md
app/: index.html  package-lock.json  package.json
app/src/: App.svelte  app.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/permissions/: allow-zingx.toml
app/src-tauri/src/: chat.rs  host.rs  lib.rs  main.rs  ollama.rs  paths.rs  pty.rs
app/src/lib/: BrowserPane.svelte  ChatsPane.svelte  HostPane.svelte  UtilsPane.svelte  types.ts
docs/: product.md
os/: Config.in  external.desc  external.mk
os/board/zingx/: Config.in  grub.cfg.in  linux.fragment  post-image.sh
os/board/zingx/initramfs/: init
os/board/zingx/rootfs_overlay/etc/: inittab  profile
os/board/zingx/rootfs_overlay/etc/init.d/: S99zingx
os/board/zingx/rootfs_overlay/etc/profile.d/: zingx.sh
os/board/zingx/zingx-init/: Config.in  zingx-init.mk
os/configs/: zingx_x86_64_defconfig
scripts/: build.sh  flash-usb.sh  prepare-usb.ps1
